--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
   "tavily-python==0.5.4",
   "pytesseract==0.3.13",
   "stripe==11.6.0",
+  "paypalrestsdk==1.13.1",
   "dramatiq==1.18.0",
   "prometheus-client==0.21.1",
   "langfuse==2.60.5",
