--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -45,6 +45,8 @@ dependencies = [
   "pytesseract==0.3.13",
   "stripe==11.6.0",
   "paypalrestsdk==1.13.1",
+  "pydantic==2.10.3",
+  "cryptography==43.0.3",
   "dramatiq==1.18.0",
   "prometheus-client==0.21.1",
   "langfuse==2.60.5",
