Fix Dockerfile to handle missing uv.lock file
- Make uv.lock optional with COPY uv.lock* ./
- Generate lock file if missing with uv lock command
- Fixes build failure when uv.lock is removed for dependency updates
- Allows container to rebuild with new dependencies

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,9 +6,12 @@ WORKDIR /app
 RUN apk add --no-cache curl git
 
 # Install Python dependencies
-COPY pyproject.toml uv.lock ./
+COPY pyproject.toml ./
+COPY uv.lock* ./
 ENV UV_LINK_MODE=copy
-RUN --mount=type=cache,target=/root/.cache/uv uv sync --locked --quiet
+RUN --mount=type=cache,target=/root/.cache/uv \
+    if [ ! -f uv.lock ]; then uv lock; fi && \
+    uv sync --locked --quiet
 
 # Copy application code
 COPY . .
