Fix UV virtual environment activation in Docker container
- Add VIRTUAL_ENV and PATH environment variables to activate UV venv
- Ensures Python can find packages installed in /app/.venv/
- Fixes 'No module named pydantic' runtime import errors
- Allows direct python commands to work without uv run prefix

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,6 +22,9 @@ ENV WORKERS=7
 ENV THREADS=2
 ENV WORKER_CONNECTIONS=2000
 
+# Activate UV virtual environment
+ENV VIRTUAL_ENV=/app/.venv
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 ENV PYTHONPATH=/app
 EXPOSE 8000
 
